Fixed portfolio alignment and sizing issues and nav bar links.

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -45,11 +45,10 @@ h3 {
 }
 
 .port-image {
-    max-width:200px;
     background-color:blue;
     border-color:white;
     padding:10px;
     align:center;
-    height:150px;
     float:none;
+    margin-bottom:50px;
 }
